--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="menu-icon">&#9776;</div>
       <div class="right">
         <ul class="menu">
-          <li><a href="#home">Home</a></li>
+          <li><a href="#aboutme">Home</a></li>
           <li><a href="#aboutme">About Me</a></li>
           <li><a href="#port">Portfolio</a></li>
           <li><a href="#contact">Contact</a></li>
