--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         endeavors.
         </p>
         <p>Thank you for taking the time to explore my work.</p>
-        <p>Please Send You Feedback...</p>
+        <p>Please Send Your Feedback...</p>
       </div>
       <div id="contact" class="fstfoot">
         <span><img src="contact.png" />
